--- a/frontend/course-manager/angular.json
+++ b/frontend/course-manager/angular.json
@@ -24,9 +24,11 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Outfit:wght@100&family=Roboto&family=Ubuntu&display=swap"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
