--- a/backend/com.guilhermeribeiro/src/main/resources/application.properties
+++ b/backend/com.guilhermeribeiro/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:productdb
+spring.datasource.url=jdbc:h2:mem:coursedb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
